# plotffi

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  build.rs  build.sh  cbindgen.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
assets/fonts/: script.sh
examples/: CMakeLists.txt  main.cpp  plotffi.hpp
include/: plotffi.h
src/: lib.rs
